--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.xtagwgj.spinetest.MainActivity">
-
+    android:orientation="vertical"
+    tools:context="com.xtagwgj.spinetest.main.MainActivity">
 
     <include layout="@layout/include_title" />
 
-    <TextView
-        android:id="@+id/tv_show"
+    <Button
+        android:id="@+id/bt_city"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="18566077938" />
+        android:layout_centerInParent="true"
+        android:layout_gravity="center_horizontal"
+        android:text="选择城市" />
+
+    <TextView
+        android:id="@+id/tv_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp" />
 
 </LinearLayout>
