--- a/base/src/main/res/values-v19/styles.xml
+++ b/base/src/main/res/values-v19/styles.xml
@@ -4,7 +4,7 @@
     <style name="BaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="android:colorBackground">@android:color/white</item>
