--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#3F51B5</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="colorTitle">#fff</color>
+    <color name="colorBackground">#F6F6F6</color>
 
     <color name="sort_catagory">#FFE0E0E0</color>
     <color name="white">#FFFFFF</color>
