登录、注册、忘记密码、自动登录，耗时操作时的加载对话框

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,8 @@
     android:orientation="vertical"
     tools:context=".user.LoginActivity">
 
+    <include layout="@layout/include_title" />
+
     <FrameLayout
         android:id="@+id/contentFrame"
         android:layout_width="match_parent"
