--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="split_line_color">#ffc9d1d9</color>
     <color name="input_stock">#ffbdc7d8</color>
 
+    <color name="brown">#7a583e</color>
+
 </resources>
