--- a/base/src/main/res/layout/include_title.xml
+++ b/base/src/main/res/layout/include_title.xml
@@ -16,9 +16,9 @@
         android:id="@+id/toolbar_back"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginStart="8dp"
         android:contentDescription="@null"
         android:padding="8dp"
-        android:layout_marginStart="8dp"
         android:src="@mipmap/icon_arrow" />
 
     <TextView
@@ -31,13 +31,14 @@
         tools:text="标题栏" />
 
     <ImageView
-
+        android:id="@+id/toolbar_more"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="end"
+        android:layout_marginEnd="8dp"
         android:contentDescription="@null"
         android:padding="8dp"
-        android:layout_marginEnd="8dp"
-        android:src="@mipmap/icon_more" />
+        android:src="@mipmap/icon_more"
+        android:visibility="gone" />
 
 </android.support.v7.widget.Toolbar>
