--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="input_stock">#ffbdc7d8</color>
 
     <color name="brown">#7a583e</color>
+    <color name="green">#008000</color>
 
 </resources>
