--- a/base/src/main/res/values/colors.xml
+++ b/base/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
     <color name="brown">#7a583e</color>
     <color name="green">#008000</color>
 
+    <color name="uncompleted_color">#A3E0D9</color>
+    <color name="uncompleted_text_color">#F8F8F8</color>
+
 </resources>
